# Vaidya

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/web/: package.json
docs/architecture/: DATA_MODEL.md  INFRASTRUCTURE.md  SECURITY.md  SYSTEM_OVERVIEW.md
docs/mvp/: CLAUDE.md  ENVIRONMENT.md  MVP.md  REPO_STRUCTURE.md
docs/operations/: INFRA_BOOTSTRAP.md
docs/rag/: CHUNKING_STRATEGY.md  CHUNK_SCHEMA.md  KB_LIFECYCLE.md  KB_SOURCES.md  RAG_PIPELINE.md
docs/safety/: AI_ORCHESTRATION.md  GUARDRAILS.md  PROMPT_ARCHITECTURE.md  URGENCY_MATRIX.md
infra/terraform/: backend-staging.hcl  backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/envs/prod/: backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/envs/staging/: backend.tf  main.tf  outputs.tf  variables.tf
infra/terraform/modules/bastion/: README.md  main.tf  outputs.tf  variables.tf
infra/terraform/modules/kms/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/rds/: README.md  main.tf  outputs.tf  variables.tf
infra/terraform/modules/redis/: README.md  main.tf  outputs.tf  variables.tf
infra/terraform/modules/s3/: main.tf  outputs.tf  policy.tf  variables.tf
infra/terraform/modules/secrets/: main.tf  outputs.tf  random.tf  variables.tf
infra/terraform/modules/sqs/: main.tf  outputs.tf  policy.tf  variables.tf
infra/terraform/modules/vpc/: endpoints.tf  main.tf  (+3 more)
localstack/init/ready.d/: 01-bootstrap.sh
scripts/: db-tunnel.sh
services/api/: package.json  pyproject.toml
