[project]
name = "vaidya-api"
version = "0.0.0"
description = "Vaidya — FastAPI backend (medical AI assistant)"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
]
